Fix article's cover at homepage overflow

--- a/public/css/retro/homepage.css
+++ b/public/css/retro/homepage.css
@@ -34,6 +34,8 @@
 
 .article-container .article-inner-container .cover-container .cover-inner{
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 .article-container .article-inner-container .cover-container .cover-inner img{
